fixing not showing news image videos etc. initially

--- a/ad-remover.css
+++ b/ad-remover.css
@@ -8,7 +8,7 @@
 .advrts {
   display: none !important;
 }
-.related-searches-list > ul, li {
+.related-searches-list > ul > li {
   display: inline !important;
   padding-right: 20px !important;
 }
